feat(*) Name arguments to HOC

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "eslint": "^4.1.0",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.6.0",
+    "jsdom": "^11.0.0",
     "mocha": "^3.4.2",
+    "react-dom": "^15.6.1",
     "sinon": "^2.3.5",
     "sinon-chai": "^2.11.0",
     "socket.io-client": "^2.0.3"
