--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -6,10 +6,29 @@
   "author": "Grant Timmerman",
   "private": true,
   "license": "BSD",
+  "babel": {
+    "presets": [
+      "es2015",
+      "react",
+      "stage-2"
+    ]
+  },
   "dependencies": {
     "express": "4.13.4"
   },
   "scripts": {
-    "start": "node index.js"
+    "start:server": "node index.js",
+    "start:client": "webpack-dev-server --progress --colors --hot --config ./webpack.config.js"
+  },
+  "devDependencies": {
+    "babel-loader": "^7.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.4",
+    "react-hot-loader": "^1.3.1",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0"
   }
 }
