--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -14,7 +14,11 @@
     ]
   },
   "dependencies": {
-    "express": "4.13.4"
+    "express": "4.13.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3"
   },
   "scripts": {
     "start:server": "node index.js",
