--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -21,13 +21,15 @@
     "socket.io-client": "^2.0.3"
   },
   "scripts": {
-    "start:server": "node index.js",
-    "start:client": "webpack-dev-server --progress --colors --hot --config ./webpack.config.js"
+    "start": "node index.js",
+    "start:dev": "webpack-dev-server --progress --colors --hot --config ./webpack.config.js"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
     "react-hot-loader": "^1.3.1",
